[project]
name = "wenyi-demo1"
description = ""
version = "1.0.0"
license = "MIT" 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["dashscope>=1.23.1", "requests", "numpy", "Pillow", "oss2", "urllib3==1.26.20"]

[project.urls]
Repository = "https://github.com/WY-S/Comfyui-Wenyi-demo1"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/WY-S/Comfyui-Wenyi-demo1/wiki"
"Bug Tracker" = "https://github.com/WY-S/Comfyui-Wenyi-demo1/issues"

[tool.comfy]
PublisherId = "wys34"
DisplayName = "Comfyui-Wenyi-demo1"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

